--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -24,13 +24,29 @@ jobs:
         with:
           channel: 'stable'
 
-      - name: Flutter pub get
+      # Install Android SDK command-line tools and required packages
+      - name: Setup Android SDK
         run: |
-          flutter pub get
+          set -eux
+          sudo mkdir -p /opt/android-sdk/cmdline-tools
+          export ANDROID_SDK_ROOT=/opt/android-sdk
+          curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+          sudo unzip -o commandlinetools.zip -d /opt/android-sdk/cmdline-tools
+          sudo mv /opt/android-sdk/cmdline-tools/cmdline-tools /opt/android-sdk/cmdline-tools/latest || true
+          yes | /opt/android-sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=${ANDROID_SDK_ROOT} "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+          echo "ANDROID_SDK_ROOT=${ANDROID_SDK_ROOT}" >> $GITHUB_ENV
+
+      - name: Accept Android Licenses
+        run: |
+          yes | ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager --licenses || true
+
+      - name: Flutter pub get
+        run: flutter pub get
 
       - name: Build release APK
-        run: |
-          flutter build apk --release
+        env:
+          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
+        run: flutter build apk --release
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
