--- a/frontend_flutter/pubspec.yaml
+++ b/frontend_flutter/pubspec.yaml
@@ -7,7 +7,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.1.0
+  http: ^0.13.6
+  flutter_secure_storage: ^8.0.0
+  provider: ^6.0.0
+  file_picker: ^5.2.3
+  flutter_map: ^4.0.0
+  latlong2: ^0.8.1
+  fl_chart: ^0.60.0
 
 dev_dependencies:
   flutter_test:
